# AlienWorlds

./: CMakeLists.txt
assets/shaders/: light_shader.frag
include/: AudioManager.hpp  Biome.hpp  Engine.hpp  EngineError.hpp  EngineProperties.hpp  Entity.hpp  GameMenu.hpp  GameScene.hpp  GameWorld.hpp  Light.hpp  Object.hpp  Player.hpp  Renderer.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  ShallowWaters.hpp  inputManager.hpp
src/: main.cpp
